--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
           <li ng-class="{ active: isActive('/settings')}"><a ng-href="#/settings">Settings/API</a></li>
           <li><a ng-href="mailto:tom.chambers@gmail.com" target="_blank">Contact</a></li>
         </ul>
-        <h3 class="title">Harmony mood tracker</h3>
+        <h3 class="title">Harmony</h3>
       </div>
 
       <div ng-view=""></div>
